--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/platform-server": "~8.2.14",
     "@angular/router": "~8.2.14",
-    "@nestjs/cli": "^6.12.9",
-    "@nestjs/common": "^6.0.0",
-    "@nestjs/core": "^6.0.0",
+    "@nestjs/cli": "^6.13.3",
+    "@nestjs/common": "^6.10.14",
+    "@nestjs/core": "^6.10.14",
     "@nestjs/ng-universal": "^2.0.1",
-    "@nestjs/platform-express": "^6.0.0",
+    "@nestjs/platform-express": "^6.10.14",
     "@nguniversal/express-engine": "^8.0.0",
     "@nguniversal/module-map-ngfactory-loader": "^8.0.0",
     "hammerjs": "^2.0.8",
@@ -41,13 +41,13 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.20",
-    "@angular/cli": "~8.3.20",
+    "@angular-devkit/build-angular": "^0.803.22",
+    "@angular/cli": "^8.3.22",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -55,7 +55,7 @@
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-jasmine-html-reporter": "^1.5.1",
     "nodemon": "^1.18.11",
     "protractor": "~5.4.0",
     "rimraf": "^2.6.3",
